--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <label for="sku-toggle" class="overlay"></label>
 
     <div class="product-image">
-        [商品主图区域 - 模拟]
+       商品の写真はまだ用意しておりますのです
     </div>
 
     <div class="card">
@@ -185,4 +185,5 @@
 
 </body>
 </html>
+
 
